# kursovaya-tournaments

./: .gitignore
backend/: Dockerfile  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 00fbd0baed3a_matches.py  11024308efba_rebootr.py  2b6da7114323_scores.py  36df4070eed0_time.py  489ad22d7f5b_features.py  557385324afc_scores.py  697f316d2a25_date.py  6cc903c554d6_username.py  a03e16468f92_init.py  a0f5001d8943_tournaments.py  aafcf68752f6_matchesupdate.py  b69cbf69af8d_rounds.py  c76c99f20a9f_scores.py
backend/src/: config.py  database.py  main.py
backend/src/auth/: client.py  crud.py  models.py  routers.py  schemas.py  testclient.py  utils.py
backend/src/tournament/: crud.py  models.py  routers.py  schemas.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_tournaments.py
frontend/: package-lock.json  package.json
frontend/src/: App copy.js  App.css  App.js  CreateTournamentModal.js  Home.js  Leaderboard.js  Login.js  Match.js  NotFound.js  Registration.js  Tournament.js  TournamentComponent.js  TournamentMatches.js  TournamentPlayers.js  User.js  utils.js
